 * Added sorting functionality to Editorial Review screen
 * Added simple default template for rendering pages

2006-08-14 cjg
 * Added order_methods param to searches to override default options.
 * Added custom order list for editorial review screen.

2006-08-14 tmb
 * Deprecated get_order_names and get_order_name
 * render_order_menu in Search now renders labels for its order_methods 
 * Added specific configuration options for sorting methods on editorial 
    review screen
 * Displayed the right datetime info on items (lastmod) and review 
    (status_changed) screens

2006-08-15 tdb
 * Added get_gid method to DataObj (implemented for EPrint and Access)
 * oai2 now uses xmlns and schema from the plugins
 * Modified OA:make_record to take a plugin argument to export to XML
 * Now only uses output_plugins argument from config

2006-08-15 cjg
 * Added addition filter to export plugins to test if they have an xmlns.

2006-08-21 cjg
 * Rewrote generate_static to use /lib/static as well as archive static.

2006-08-21 cjg
 * Changed datatype fields to be called namedset
 * types/*.xml are now namedset/* and are plain text, not XML
 * Changed public security from "" to "public" on documents.

2006-09-04 cjg
 * Removed type validation from EPrint

2006-09-04 cjg
 * Mapped status, editor, deposit and editor user flags into detailed privs
    - still needs other flags doing, and some privs may need tweaking.
 * Added $user->allow() to test if a user can do a lowlevel priv on a given
    item.
 * Shifted more of screens to use action methods
 * Added $screen->allow_foo() methods to test if a given action is allowed.
 * Removed {priv} property of screens and replaced it with can_be_viewed
 * Removed get_allowed_actions and get_allowed_tools - replaced with
    list_items.
 * Added some missing phrases.

2006-09-04 cjg
 * Removed unused javascript and css files
 * Moved all system images to /lib from /defaultcfg